Add weather label

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="cards"></div>
   </main>
 
-  <div id="app"></div>
+  <footer>© Copyright 2023 EurOrbit</footer>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
